# app/Http/Controllers/AuthController.php
@@ -1,0 +1,47 @@
+<?php
+
+namespace App\Http\Controllers;
+
+use Illuminate\Http\Request;
+use Illuminate\Support\Facades\Auth;
+
+class AuthController extends Controller
+{
+    /**
+     *  @OA\Post(
+     *      tags={"/login"},
+     *      summary="Autenticação do usuário.",
+     *      description="Recebe o email e senha para retornar o usuário autenticado.",
+     *      path="/login",
+     *      @OA\RequestBody(
+     *          required=true,
+     *          @OA\JsonContent(
+     *              type="object",
+     *              @OA\Property(property="email", type="string"),
+     *              @OA\Property(property="password", type="string"),
+     *          ),
+     *      ),
+     *      @OA\Response(
+     *          response="200", description="Token de acesso criado."
+     *      ),
+     *  )
+     *
+     * @return JsonResponse
+     */
+    public function authenticate(Request $request)
+    {
+        $credentials = $request->only('email', 'password');
+
+        if (Auth::attempt($credentials)) {
+            $user = Auth::user();
+            $user->tokens()->delete();
+            $token = $user->createToken('token-name')->plainTextToken;
+            return response()->json([
+                'user' => $user,
+                'token' => $token
+            ], 200);
+        }
+
+        return response()->json(['error' => 'Unauthorized'], 401);
+    }
+}
