# app/Http/Controllers/TokenController.php
@@ -7,6 +7,33 @@ use Laravel\Sanctum\PersonalAccessToken;
 
 class TokenController extends Controller
 {
+    /*
+     *  @OA\Post(
+     *      tags={"/tokens"},
+     *      summary="Cria um token de acesso.",
+     *      description="Cria um novo token de acesso e persiste no banco de dados.",
+     *      path="/tokens",
+     *      security={{"bearerAuth": {}}},
+     *      @OA\RequestBody(
+     *          required=true,
+     *          @OA\JsonContent(
+     *              type="object",
+     *              @OA\Property(property="device", type="string"),
+     *              @OA\Property(property="abilities", type="array",
+     *                  @OA\Items(
+     *                      type="array",
+     *                      @OA\Items()
+     *                  ),
+     *              ),
+     *          ),
+     *      ),
+     *      @OA\Response(
+     *          response="201", description="Token de acesso criado."
+     *      ),
+     *  )
+     *
+     * @return JsonResponse
+     */
     public function store(Request $request)
     {
         $token = $request->user()->createToken(
@@ -16,10 +43,30 @@ class TokenController extends Controller
         return response()->json(['token' => $token->plainTextToken]);
     }
 
+    /*
+     *  @OA\Delete(
+     *      tags={"/tokens"},
+     *      summary="Remove um token de acesso.",
+     *      description="Remove um token de acesso e o exclui do banco de dados.",
+     *      path="/tokens/{id}",
+     *      security={{"bearerAuth": {}}},
+     *      @OA\Parameter(
+     *          name="token",
+     *          required=true,
+     *          in="path",
+     *          description="Id do Token",
+     *          @OA\Schema(type="integer"),
+     *      ),
+     *      @OA\Response(
+     *          response="204", description="Token de acesso excluído."
+     *      ),
+     *  )
+     *
+     * @return null
+     */
     public function destroy(Request $request, PersonalAccessToken $token)
     {
         $request->user()->tokens()->where('id', $token->id)->delete();
         return response()->json(null, 204);
     }
-
 }
