# routes/api.php
@@ -2,6 +2,7 @@
 
 use App\Http\Controllers\StudentController;
 use App\Http\Controllers\TokenController;
+use App\Http\Controllers\AuthController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 
@@ -24,9 +25,10 @@ Route::middleware('auth:sanctum')->group(function (){
     Route::get('/user', function (Request $request) {
         return $request->user();
     });
-    //Route::apiResource('students', StudentController::class);
+    Route::apiResource('students', StudentController::class);
     Route::apiResource('tokens', TokenController::class)->only(['store', 'destroy']);
 });
 
+Route::post('/login', [AuthController::class, 'authenticate'])->name('login');
 
-Route::apiResource('students', StudentController::class);
+//Route::apiResource('students', StudentController::class);
